Bug 418028 - Select Opaque (Replace) doesn't reset selection
Summary: Select Opaque (Replace) doesn't reset selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.2.8
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-22 11:11 UTC by Leonard Ritter
Modified: 2020-06-03 19:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonard Ritter 2020-02-22 11:11:02 UTC
The `Select Opaque (Replace)` function isn't changing the selection when the layer on which the selection is performed is empty.

1. Create an empty layer.
2. Make a random selection over the image so something is selected.
3. Choose `Select Opaque (Replace)`

Observed: The random selection from step 2 is still active.
Expected: the selection should be reset completely, to indicate that nothing could be selected.
Comment 1 Ahab Greybeard 2020-02-24 11:29:53 UTC
I can confirm this for 4.2.8 and a recent 4.3.0 prealpha version.
All other variants of Select Opaque work as expected.
(It may be a 'logical' consequence of there being nothing to select.)
Comment 2 Dmitry Kazakov 2020-06-03 19:59:38 UTC
Git commit 9ee6202a88a2d7e5922c76ceb9a1557efafa88c9 by Dmitry Kazakov.
Committed on 03/06/2020 at 19:59.
Pushed by dkazakov into branch 'krita/4.3'.

Let Select Opaque deselect the selection when the layer is empty

Select Opaque will deselect the selection when mode is "replace" or
"intersect".

M  +9    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/graphics/krita/commit/9ee6202a88a2d7e5922c76ceb9a1557efafa88c9
Comment 3 Dmitry Kazakov 2020-06-03 19:59:54 UTC
Git commit 2bbb496f4d36ee9830652a4fb5f89c707310804b by Dmitry Kazakov.
Committed on 03/06/2020 at 19:59.
Pushed by dkazakov into branch 'master'.

Let Select Opaque deselect the selection when the layer is empty

Select Opaque will deselect the selection when mode is "replace" or
"intersect".

M  +9    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/graphics/krita/commit/2bbb496f4d36ee9830652a4fb5f89c707310804b