Let Select Opaque deselect the selection when the layer is empty

Select Opaque will deselect the selection when mode is "replace" or
"intersect".

BUG:418028