libs/ui/kis_selection_manager.cc
@@ -688,7 +688,15 @@ void KisSelectionManager::selectOpaqueOnNode(KisNodeSP node, SelectionAction act
         if (!device) return;
 
         QRect rc = device->exactBounds();
-        if (rc.isEmpty()) return;
+        if (rc.isEmpty()) {
+
+            if (action == SELECTION_REPLACE || action == SELECTION_INTERSECT) {
+                KUndo2Command *deselectCommand = new KisDeselectActiveSelectionCommand(m_view->selection(), m_view->image());
+                KisProcessingApplicator::runSingleCommandStroke(m_view->image(), deselectCommand);
+            }
+
+            return;
+        }
 
         KIS_ASSERT_RECOVER_RETURN(canvas);
 
